--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Nombre - CV</title>
+    <title>Gabriel Alonso González Medina - CV</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,46 +32,51 @@
         li {
             margin-bottom: 10px;
         }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Tu Nombre</h1>
+            <h1>Gabriel Alonso González Medina</h1>
             <p>Curriculum Vitae</p>
         </header>
-        <section>
-            <h2>Información de contacto</h2>
-            <ul>
-                <li>Correo electrónico: tuemail@example.com</li>
-                <li>Teléfono: +123456789</li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/tuperfil" target="_blank">Perfil de LinkedIn</a></li>
-                <!-- Agrega más información de contacto si es necesario -->
-            </ul>
-        </section>
-        <section>
-            <h2>Experiencia laboral</h2>
-            <ul>
-                <li>
-                    <h3>Nombre del trabajo o empresa</h3>
-                    <p>Descripción breve de las responsabilidades y logros en este trabajo.</p>
-                    <p>Fecha de inicio - Fecha de finalización (si aplica)</p>
-                </li>
-                <!-- Agrega más experiencias laborales si es necesario -->
-            </ul>
-        </section>
         <section>
             <h2>Educación</h2>
             <ul>
                 <li>
-                    <h3>Nombre del título o certificación</h3>
-                    <p>Institución educativa</p>
-                    <p>Año de graduación</p>
+                    <h3>Licenciatura en Psicología</h3>
+                    <p>UNIVERSIDAD DE CHILE, Santiago de Chile</p>
+                    <p>2010-2015</p>
+                    <p>Psicología Clínica (un año de práctica)</p>
                 </li>
-                <!-- Agrega más información educativa si es necesario -->
+                <li>
+                    <h3>Maestría en Epidemiología</h3>
+                    <p>PONTIFICIA UNIVERSIDAD CATÓLICA DE CHILE, Santiago de Chile</p>
+                    <p>2015-2016</p>
+                    <p>Cursos: Análisis del diseño de la encuesta, Determinantes sociales de la salud</p>
+                </li>
+                <li>
+                    <h3>Doctorado en Epidemiología</h3>
+                    <p>PONTIFICIA UNIVERSIDAD CATÓLICA DE CHILE, Santiago de Chile</p>
+                    <p>2021-actualidad</p>
+                    <p>Cursos: Bioestadística avanzada y métodos epidemiológicos, Urbanismo, Teoría del curso de la vida</p>
+                </li>
+                <li>
+                    <h3>Pasantía en Laboratorio de Inferencia Causal</h3>
+                    <p>UNIVERSIDAD DE SAO PAULO, São Paulo, Brasil</p>
+                    <p>Noviembre 2023 - Enero 2024</p>
+                    <p>Escuela de Verano: Ciencia política experimental, Enero 2024</p>
+                </li>
             </ul>
         </section>
-        <!-- Puedes agregar más secciones según sea necesario, como habilidades, proyectos, etc. -->
+        <!-- Agrega más secciones para Experiencia, Certificaciones, Habilidades, Investigación, Congresos y Seminarios si es necesario -->
     </div>
 </body>
 </html>
